--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ azure-identity==1.12.0
 azure-keyvault-secrets==4.7.0
 apache-airflow-providers-airbyte==3.2.0
 apache-airflow-providers-dbt-cloud==3.1.0
+apache-airflow-providers-snowflake==4.1.0
 azure-ai-formrecognizer==3.2.0
 pytesseract
 pdf2image
